# LibraryTemplate

./: CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
.github/workflows/: cmake.yml
Main/: CMakeLists.txt  Main.cpp  Main.h
MykLibTemplate/: CMakeLists.txt  MykClassTemplate.cpp  MykLibTemplate.cpp  dllmain.cpp  pch.h
MykLibTemplate/include/: MykClassTemplate.hpp  MykLibTemplate.h
